activando microservicio como cliente eureka

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ client:
     application:
       name: servicio-productos
     url: http://localhost:8081/
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
