agregando configuración config client para apuntar al servicio de configuración conig-server para acceder a los datos del application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: servicio-items
+  config:
+    import: configserver:http://localhost:8888
 server:
   port: 8082
 
